# rust-licverify

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  hardware.rs  lib.rs  license.rs  main.rs  verifier.rs
tests/: integration_test.rs
tests/fixtures/: test_license.lic
tests/fixtures/keys/: private.pem  public.pem
