[package]
name = "licverify"
version = "0.1.1"
edition = "2024"
description = "Rust client for go-license verification system"
authors = ["Luthfi Imanal Satrya <luthfi.imanal.satrya@gmail.com>"]
license = "MIT"

[[bin]]
name = "licverify"
path = "src/main.rs"

[dependencies]
rsa = { version = "0.9", features = ["std"] }
sha2 = { version = "0.10", features = ["oid"] }
signature = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
pem = "3.0"

# Platform-specific dependencies for hardware detection
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.27"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.5"
